# corp-buddy-bot

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  index.html  summary.md  tailwind.config.ts
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  chat.py  documents.py  faqs.py  transactions.py
backend/app/core/: db.py  notifications.py  orchestrator.py  qa_engine.py
backend/app/models/: tables.py
backend/data/: buddy.db
backend/data/chroma_db/: chroma.sqlite3
src/: App.tsx  index.css
src/integrations/supabase/: client.ts
src/pages/: Chat.tsx  Login.tsx  Staff.tsx
supabase/: config.toml
tests/: run_tests.sh
